--- a/BGTviewer.csproj
+++ b/BGTviewer.csproj
@@ -120,6 +120,7 @@
     <Compile Include="App.xaml.cs">
       <DependentUpon>App.xaml</DependentUpon>
     </Compile>
+    <Compile Include="OverlappingDifficulty.cs" />
     <Compile Include="Pressure.cs" />
     <Compile Include="Figure.cs" />
     <Compile Include="MainPage.xaml.cs">
@@ -127,6 +128,7 @@
     </Compile>
     <Compile Include="PressureGraph.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Reiteration.cs" />
   </ItemGroup>
   <ItemGroup>
     <AppxManifest Include="Package.appxmanifest">
