--- a/BGTviewer.csproj
+++ b/BGTviewer.csproj
@@ -216,6 +216,9 @@
     <PackageReference Include="SQLitePCLRaw.core">
       <Version>2.0.4</Version>
     </PackageReference>
+    <PackageReference Include="System.Data.SQLite">
+      <Version>1.0.113.6</Version>
+    </PackageReference>
     <PackageReference Include="WinRTXamlToolkit.Controls.DataVisualization.UWP">
       <Version>2.3.0</Version>
     </PackageReference>
