Revert "UI간단한 레포트 추가, 주석추가, Crossing 수정"
This reverts commit b0b517d657fd247c3158f3ec61f0f2fdbc200124.

--- a/BGTviewer.csproj
+++ b/BGTviewer.csproj
@@ -121,6 +121,7 @@
       <DependentUpon>App.xaml</DependentUpon>
     </Compile>
     <Compile Include="Drawing.cs" />
+    <Compile Include="Elaboration.cs" />
     <Compile Include="FigureInfo.cs" />
     <Compile Include="Crossing.cs" />
     <Compile Include="OverlappingDifficulty.cs" />
